
New functionality
- 'gips_project stack' for creating stacks of products in a GIPS project directory
- added mapreduce utilities for multiprocessing
- added 'nomosaic' option to project, which will keep the data as tiles (but still warp)

AOD
- fixed retrieval of Aerosol Optical Depth from MOD08 data

LANDSAT
- products added: dn (digital numbers), volref (volumetric reflectance of water)

MODIS
- fixed segfault in indices and cleaned up extraneous printing
- fixed nodata value in ndvi8 product

v0.7.0
- Refactoring of inventory classes and printing
- Renaming of products to replace underscores (_) with dashes (-) in the product name
- Addition of gips_project script (print inventory, create browse images)
- Changed naming convention of project directories to shapefile_resolution_datasetname
- misc fixes/improvements to argument parsing and verbose output
- refactored argument parsing of products, now use -p switch rather than individual product switches
- added 'products' sub-command to get listing of available products
- fixed creation of mosaics without warping

landsat:
- fixed bug with TOA indices generating wrong values

AOD:
- throw error if unable to retrieve AOD estimate

SARannual
- fixed bug when processing product for multiple tiles and asset doesn't exist for some tiles

MODIS
- Refactored code and implemented product naming convention

v0.6.8
- added Algorithm base class and updated scripts to utilize Algorithm class
- additional algorithm scripts added (gips_tclass, gips_truth, gips_mask)

landsat:
- fixed check of negative reflectances (was converted to NoData)
- fixed bug where AOD was not calculating long term average if data not available

v0.6.7
- changed library name to GIPS
- added algorithms module back to main GIPS
- bumped GIPPY dependency to 0.9.7

landsat:
- added tassled cap transformation
- reflectance not allowed to be negative (capped at 0)


v0.6.6
- removed masking feature from 'project' command (replaced with gip_mask)